--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/jquery": "^3.5.32",
     "@types/node": "^22.7.5",
     "esri-leaflet": "^3.0.13",
+    "jquery": "^3.7.1",
     "jQuery": "^1.7.4",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/jquery": "^3.5.32",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
