--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^22.7.5",
     "esri-leaflet": "^3.0.13",
     "jQuery": "^1.7.4",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
