--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jQuery": "^1.7.4",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "openmeteo": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1"
