--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/esri-leaflet": "^3.0.3",
     "@types/node": "^22.7.5",
     "esri-leaflet": "^3.0.13",
     "jQuery": "^1.7.4",
