--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^22.7.5",
+    "axios": "^1.7.9",
     "esri-leaflet": "^3.0.13",
     "jQuery": "^1.7.4",
     "jwt-decode": "^4.0.0",
@@ -35,7 +36,7 @@
     "i": "^0.3.7",
     "jquery": "^3.7.1",
     "npm": "^10.9.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
