--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arcgis/core": "^4.31.6",
     "@types/node": "^22.7.5",
     "axios": "^1.7.9",
     "esri-leaflet": "^3.0.13",
