--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "openmeteo": "^1.1.4",
+    "proj4": "^2.15.0",
+    "proj4leaflet": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1"
