--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/js": "^9.11.1",
     "@types/esri-leaflet": "^3.0.3",
     "@types/jquery": "^3.5.32",
+    "@types/proj4": "^2.5.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/react-leaflet": "^2.8.3",
