--- a/MakeFile
+++ b/MakeFile
@@ -37,7 +37,7 @@ deploy:
 
 remote-run:
 	read -p "Enter server db password: " db_pass; \
-	ssh cs330 "nohup ./skismart --password ${db_pass} --react-dir skismart.js > skismart.log 2>&1 &"
+	ssh cs330 "nohup ./skismart --password $$db_pass --react-dir skismart.js > skismart.log 2>&1 &"
 
 remote-stop:
-	ssh cs330 "pkill skismart"
+	ssh cs330 "pkill skismart" || true
